# multicallable

./: .gitignore  LICENCE  README.md  requirements.txt  setup.cfg  setup.py
multicallable/multicall/: __init__.py  constants.py  multicall.py
src/multicallable/: __init__.py  async_multicallable.py  multicallable.py  utils.py
src/multicallable/multicall/: __init__.py  async_multicall.py  constants.py  multicall.py
