[metadata]
name = multicallable
version =4.0.0
author = Hassan Abbasi, Mojtaba Farokhi
author_email = hassan.abbp@gmail.com
description = Easy way to work with Multicall package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deusfinance/multicallable
project_urls =
    Bug Tracker = https://github.com/deusfinance/multicallable/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
