[metadata]
name = multicallable
version = 6.0.4
author = MiKO, Naveed
author_email = mikoronjoo@gmail.com, naveedinno@proton.me
description = Easy way to work with Multicall package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deusfinance/multicallable
project_urls =
    Bug Tracker = https://github.com/deusfinance/multicallable/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7.2,<4.0.0

[options.packages.find]
where = src
